# Claude

./: .gitignore  README.md  requirements.txt
atn/: pyproject.toml
atn/atn/: __init__.py
atn/atn/core/: __init__.py  gauss_jordan.py  network.py
atn/atn/coupling/: __init__.py  model.py
atn/atn/networks/: __init__.py  district_heating.py  electrical.py  gas.py  water.py
atn/atn/validation/: __init__.py  measurements.py
atn/atn/visualization/: __init__.py  plots.py
atn/examples/: 01_electrical_dc.py  02_district_heating.py  03_sector_coupling.py  04_visualization.py  05_water_network.py  06_gas_network.py
dashboard/: app.py  csv_import.py  geo_map.py  geo_networks.py  sector_coupling.py
dashboard/beispiel_csv/: dc_leitungen.csv  gas_leitungen.csv  wasser_leitungen.csv
