[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atn-framework"
version = "0.1.0"
description = "Allgemeine Theorie der Technischen Netze — Python-Implementierung"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = ["pytest>=7", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["atn*"]
